compilateurDeca/src/test/deca/context/valid/objet/passe1_2/P2_redef_valide.deca
class A {
    A move() { return null; }
}
class B extends A {
    B move() { return null; } // Redéfinition valide (B est sous-type de A)
}
