compilateurDeca/src/test/deca/context/invalid/objet/P2_champ_sur_methode.deca
class A {
    void m() {}
}
class B extends A {
    int m; // Erreur : m est déjà une méthode dans la super-classe
}
